Complete convert.jar tool with working MEI ID filtering and MP3 output
Co-authored-by: pfefferniels <47777840+pfefferniels@users.noreply.github.com>